grammar.js
    source_file: ($) => repeat($.top_level_item),

    top_level_item: ($) =>
      choice(
        $.import_declaration,
        seq(repeat(field("attribute", $.attribute)), $.let_declaration),
        seq(repeat(field("attribute", $.attribute)), $.const_declaration),
        seq(repeat(field("attribute", $.attribute)), $.type_declaration),
        seq(repeat(field("attribute", $.attribute)), $.test_declaration),
        $.function_declaration,
      ),

    import_declaration: ($) =>
      seq(
        "import",
        field(
          "path",
          choice($.string_literal, $.identifier, $.scoped_identifier),
        ),
        optional(seq("as", field("alias", $.identifier))),
        optional(";"),
      ),

    let_declaration: ($) => seq($.let_clause, optional(";")),

    const_declaration: ($) =>
      seq(
        "const",
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("value", $.expression))),
        optional(";"),
      ),

    type_declaration: ($) =>
      seq(
        "type",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        optional($.move),
        field("value", $.type),
      ),

    attribute: ($) =>
      seq(
        "#",
        "[",
        field("name", $.identifier),
        optional(
          seq(
            "(",
            optional(
              commaSep1(
                choice(
                  field("string", $.string_literal),
                  field("arg", $.identifier),
                ),
              ),
            ),
            optional(","),
            ")",
          ),
        ),
        "]",
      ),

    function_declaration: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        optional("unsafe"),
        "fn",
        choice(
          field("name", $.identifier),
          seq(
            field(
              "owner",
              choice($.identifier, $.scoped_identifier, $.generic_type),
            ),
            "::",
            field("name", $.identifier),
          ),
        ),
        optional(field("type_parameters", $.type_parameter_list)),
        field("parameters", $.parameter_list),
        optional(seq("->", field("result", $.type))),
        choice(field("body", $.block), ";"),
      ),

    parameter_list: ($) =>
      seq("(", optional(commaSep1($.parameter)), optional(","), ")"),

    parameter: ($) => choice($.self_parameter, $.typed_parameter),

    block: ($) => seq("{", repeat($.statement), "}"),

    labeled_statement: ($) =>
      prec.right(
        seq(field("label", $.identifier), ":", field("statement", $.statement)),
      ),

    let_statement: ($) => seq($.let_clause, optional(";")),

    let_clause: ($) =>
      seq(
        "let",
        optional("mut"),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("value", $.expression))),
      ),

    return_statement: ($) =>
      prec.right(
        seq("return", optional(field("value", $.expression)), optional(";")),
      ),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $.expression),
        field("consequence", $.block),
        optional(
          seq("else", field("alternative", choice($.block, $.if_statement))),
        ),
      ),

    match_expression: ($) =>
      seq("match", field("value", $.expression), "{", repeat($.match_arm), "}"),

    match_arm: ($) =>
      seq(
        field("pattern", $.match_pattern),
        "=>",
        field("body", choice($.block, $.expression)),
      ),

    match_pattern: ($) =>
      choice("_", seq($.is, field("type", $.type)), $.expression),

    while_statement: ($) =>
      seq("while", field("condition", $.expression), field("body", $.block)),

    for_statement: ($) =>
      seq(
        "for",
        field("iterable", $.expression),
        "|",
        choice(
          seq(field("value", $.identifier), "|"),
          seq(
            field("index", $.identifier),
            ",",
            field("value", $.identifier),
            "|",
          ),
        ),
        field("body", $.block),
      ),

    defer_statement: ($) =>
      seq(
        "defer",
        field("value", choice($.block, $.release_clause, $.expression)),
        optional(";"),
      ),

    release_clause: ($) => seq("release", field("value", $.expression)),

    panic_statement: ($) =>
      prec.right(
        PREC.prefix + 1,
        seq("panic", field("value", $.expression), optional(";")),
      ),

    lock_statement: ($) =>
      seq(
        "lock",
        field("value", $.expression),
        "as",
        field("name", $.identifier),
        field("body", $.block),
      ),

    break_statement: ($) =>
      prec.right(
        seq("break", optional(field("label", $.identifier)), optional(";")),
      ),

    continue_statement: ($) =>
      prec.right(
        seq("continue", optional(field("label", $.identifier)), optional(";")),
      ),

    assignment_statement: ($) => seq($.assignment_clause, optional(";")),

    assignment_clause: ($) =>
      seq(
        field("left", $.expression),
        field("operator", choice("=", "+=", "-=", "*=", "/=", "%=")),
        field("right", $.expression),
      ),

    composite_literal: ($) =>
      seq(
        ".",
        optional(field("type", choice($.generic_type, $.named_type))),
        "{",
        optional(commaSep1(choice($.named_field_initializer, $.expression))),
        optional(","),
        "}",
      ),

    named_field_initializer: ($) =>
      seq(".", field("name", $.identifier), "=", field("value", $.expression)),

    selector_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(field("value", $.expression), ".", field("field", $.identifier)),
      ),

    error_propagate_expression: ($) =>
      prec.left(PREC.postfix, seq(field("value", $.expression), "!!")),

    cast_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(field("value", $.expression), "as", field("type", $.type)),
      ),

    prefix_expression: ($) =>
      prec.right(
        PREC.prefix,
        choice(
          seq("&", optional("mut"), field("value", $.expression)),
          seq(
            choice("*", "-", "!", "?", "take", "comptime", "copy"),
            field("value", $.expression),
          ),
        ),
      ),

    catch_expression: ($) =>
      prec.left(
        PREC.catch,
        seq(
          field("left", $.expression),
          "catch",
          choice(
            field("fallback", $.expression),
            seq(
              "|",
              field("payload", $.identifier),
              "|",
              field("handler", $.block),
            ),
          ),
        ),
      ),

    binary_expression: ($) =>
      choice(
        prec.left(
          PREC.coalesce,
          seq(field("left", $.expression), "??", field("right", $.expression)),
        ),
        prec.left(
          PREC.or,
          seq(field("left", $.expression), "||", field("right", $.expression)),
        ),
        prec.left(
          PREC.and,
          seq(field("left", $.expression), "&&", field("right", $.expression)),
        ),
        prec.left(
          PREC.equality,
          seq(
            field("left", $.expression),
            choice("==", "!="),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.comparison,
          seq(field("left", $.expression), $.is, field("right", $.type)),
        ),
        prec.left(
          PREC.comparison,
          seq(
            field("left", $.expression),
            choice("<", "<=", ">", ">="),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.sum,
          seq(
            field("left", $.expression),
            choice("+", "-"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.product,
          seq(
            field("left", $.expression),
            choice("*", "/", "%"),
            field("right", $.expression),
          ),
        ),
      ),

    move: () => "move",
    named_type: ($) => choice($.identifier, $.scoped_identifier),
    optional_type: ($) => seq("?", $.type),
    pointer_type: ($) => seq("*", $.type),
    array_type: ($) =>
      seq("[", field("size", $.array_length), "]", field("element", $.type)),
    struct_type: ($) => seq("struct", "{", repeat($.field_declaration), "}"),
    field_declaration: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("value", $.expression))),
        optional(";"),
      ),

    enum_type: ($) =>
      seq("enum", "{", optional(commaSep1($.identifier)), optional(","), "}"),
    none_literal: ($) => "none",
    number_literal: ($) =>
      token(
        choice(HEX_NUMBER, OCT_NUMBER, BIN_NUMBER, IMAG_NUMBER, FLOAT_NUMBER),
      ),
    string_literal: ($) => token(/"(?:\\.|[^"\\\n])*"/),
    identifier: () => /[A-Za-z_][A-Za-z0-9_]*/,
    line_comment: () => token(/\/\/[^\n]*/),
