test/corpus/core.txt
==================
Core Declarations
==================

import "math::complex";
let mut GlobalCount: i32 = 0
const BuildMode = "debug"

type Point struct {
  x i32 = 0
  y i32 = 0
  static origin Point = .{}
}

#[if(target_os, "linux")]
type Handle move enum {
  stdin,
  stdout,
}

fn (p *mut Point) Shift(dx i32, dy i32) Point {
  let mut next: Point = .{ .x = dx, .y = dy }
  return copy next
}

---

(source_file
  (top_level_item
    (import_declaration
      path: (string_literal)))
  (top_level_item
    (let_declaration
      (let_clause
        name: (identifier)
        type: (named_type
          (identifier))
        value: (number_literal))))
  (top_level_item
    (const_declaration
      name: (identifier)
      value: (string_literal)))
  (top_level_item
    (type_declaration
      name: (identifier)
      value: (struct_type
        (field_declaration
          name: (identifier)
          type: (named_type
            (identifier))
          value: (number_literal))
        (field_declaration
          name: (identifier)
          type: (named_type
            (identifier))
          value: (number_literal))
        (static_field_declaration
          name: (identifier)
          type: (named_type
            (identifier))
          value: (composite_literal)))))
  (top_level_item
    attribute: (attribute
      name: (identifier)
      arg: (identifier)
      string: (string_literal))
    (type_declaration
      name: (identifier)
      (move)
      value: (enum_type
        (identifier)
        (identifier))))
  (top_level_item
    (function_declaration
      receiver: (receiver
        name: (identifier)
        type: (pointer_type
          (named_type
            (identifier))))
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (named_type
            (identifier)))
        (parameter
          name: (identifier)
          type: (named_type
            (identifier))))
      result: (named_type
        (identifier))
      body: (block
        (let_statement
          (let_clause
            name: (identifier)
            type: (named_type
              (identifier))
            value: (composite_literal
              (named_field_initializer
                name: (identifier)
                value: (identifier))
              (named_field_initializer
                name: (identifier)
                value: (identifier)))))
        (return_statement
          value: (prefix_expression
            value: (identifier)))))))

==================
Expressions
==================

unsafe fn Eval(comptime T Type, value T) T {
  let v = comptime value ?? none
  let n = 1 as i64
  if value == .{ .x = 1 } {
    return value!! catch value
  } else {
    return &mut value.x
  }
}

---

(source_file
  (top_level_item
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (named_type
            (identifier)))
        (parameter
          name: (identifier)
          type: (named_type
            (identifier))))
      result: (named_type
        (identifier))
      body: (block
        (let_statement
          (let_clause
            name: (identifier)
            value: (binary_expression
              left: (prefix_expression
                value: (identifier))
              right: (none_literal))))
        (let_statement
          (let_clause
            name: (identifier)
            value: (cast_expression
              value: (number_literal)
              type: (named_type
                (identifier)))))
        (if_statement
          condition: (binary_expression
            left: (identifier)
            right: (composite_literal
              (named_field_initializer
                name: (identifier)
                value: (number_literal))))
          consequence: (block
            (return_statement
              value: (catch_expression
                left: (error_propagate_expression
                  value: (identifier))
                fallback: (identifier))))
          alternative: (block
            (return_statement
              value: (prefix_expression
                value: (selector_expression
                  value: (identifier)
                  field: (identifier))))))))))

==================
For And Control
==================

fn Run(m Mutex, items [3]i32) i32 {
  let mut sum: i32 = 0

  for items |v| {
    sum = sum + v
  }

  for items |i, v| {
    defer release m
    lock m as g {
      defer release g
      panic "boom"
      continue
    }
  }

  return sum
}

---

(source_file
  (top_level_item
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (named_type
            (identifier)))
        (parameter
          name: (identifier)
          type: (array_type
            size: (number_literal)
            element: (named_type
              (identifier)))))
      result: (named_type
        (identifier))
      body: (block
        (let_statement
          (let_clause
            name: (identifier)
            type: (named_type
              (identifier))
            value: (number_literal)))
        (for_statement
          iterable: (identifier)
          value: (identifier)
          body: (block
            (assignment_statement
              (assignment_clause
                left: (identifier)
                right: (binary_expression
                  left: (identifier)
                  right: (identifier))))))
        (for_statement
          iterable: (identifier)
          index: (identifier)
          value: (identifier)
          body: (block
            (defer_statement
              value: (release_clause
                value: (identifier)))
            (lock_statement
              value: (identifier)
              name: (identifier)
              body: (block
                (defer_statement
                  value: (release_clause
                    value: (identifier)))
                (panic_statement
                  value: (string_literal))
                (continue_statement)))))
        (return_statement
          value: (identifier))))))

==================
Match Expressions
==================

fn Check(value ?i32) i32 {
  let out: i32 = match value {
    is i32 => value
    _ => -1
  }
  return out
}

---

(source_file
  (top_level_item
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (optional_type
            (named_type
              (identifier)))))
      result: (named_type
        (identifier))
      body: (block
        (let_statement
          (let_clause
            name: (identifier)
            type: (named_type
              (identifier))
            value: (match_expression
              value: (identifier)
              (match_arm
                pattern: (match_pattern
                  type: (named_type
                    (identifier)))
                body: (identifier))
              (match_arm
                pattern: (match_pattern)
                body: (prefix_expression
                  value: (number_literal))))))
        (return_statement
          value: (identifier))))))

==================
Labels
==================

fn RunLabels(items [3]i32) void {
  outer: for items |v| {
    inner: while ready {
      break outer
    }
    continue outer
  }
}

---

(source_file
  (top_level_item
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (array_type
            size: (number_literal)
            element: (named_type
              (identifier)))))
      result: (named_type
        (identifier))
      body: (block
        (labeled_statement
          label: (identifier)
          statement: (for_statement
            iterable: (identifier)
            value: (identifier)
            body: (block
              (labeled_statement
                label: (identifier)
                statement: (while_statement
                  condition: (identifier)
                  body: (block
                    (break_statement
                      label: (identifier)))))
              (continue_statement
                label: (identifier)))))))))

==================
Builtin Declarations
==================

/// Returns the current panic payload as a string.
#[builtin]
fn recover() string;

#[extern("ferret_io_println")]
fn Println(text string) void;

---

(source_file
  (line_comment)
  (top_level_item
    (function_declaration
      attribute: (attribute
        name: (identifier))
      name: (identifier)
      parameters: (parameter_list)
      result: (named_type
        (identifier))))
  (top_level_item
    (function_declaration
      attribute: (attribute
        name: (identifier)
        string: (string_literal))
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (named_type
            (identifier))))
      result: (named_type
        (identifier)))))
